added more plots for 3-region and performed spell-check

--- a/doc/dissertation/acknowledgements.tex
+++ b/doc/dissertation/acknowledgements.tex
@@ -1,6 +1,6 @@
-\chapter*{ACKNOWLEDGEMENTS}
+\chapter*{ACKNOWLEDGMENTS}
 % Needs to be set to part, so the TOC doesnt add 'CHAPTER ' prefix in the TOC.
-\addcontentsline{toc}{chapter}{ACKNOWLEDGEMENTS}  
+\addcontentsline{toc}{chapter}{ACKNOWLEDGMENTS}  
 
 \indent
 First and foremost, I would like to thank my advisor, Dr. Jean Ragusa,
@@ -8,7 +8,7 @@ for his years of guidance, wisdom, patience, and expertise. I would also like to
 thank Dr. Marco Delchini for his time, effort, and
 knowledge in the development of methods for the shallow water equations.
 
-I would like to thank Drs. Jean-Luc Guermond and Bojan Popov for their
+I would like to thank Dr. Jean-Luc Guermond and Dr. Bojan Popov for their
 time and expertise in entropy-based artificial dissipation and
 conservation law methodology. Their recent work on discrete maximum principle-
 preserving and invariant domain methods was the foundation of this dissertation.
@@ -16,8 +16,8 @@ preserving and invariant domain methods was the foundation of this dissertation.
 I would like to thank all of those who have contributed to the
 development of the \texttt{deal.II} finite element library, which has been
 a tremendous help in the implementation of the methods given in this
-dissertation. I would especially like to thank Drs. Wolfgang Bangerth
-and Bruno Turcksin, who have quickly answered many questions I had regarding
+dissertation. I would especially like to thank Dr. Wolfgang Bangerth
+and Dr. Bruno Turcksin, who have quickly answered many questions I had regarding
 the use of \texttt{deal.II}.
 
 I would like to thank those who have contributed to the development
@@ -26,7 +26,7 @@ of the methodology used in this research. I would like to thank Dr. Dmitri Kuzmi
 for his responses in my questions about FCT.
 
 I would like to thank the the U.S. Department of Energy for providing
-funding for this reasearch through the Nuclear Energy University
+funding for this research through the Nuclear Energy University
 Programs (NEUP) fellowship. I would also like to thank Dr. Richard
 Martineau of Idaho National Laboratory for providing funding of
 the last two semesters of research.
