--- a/doc/dissertation/content/high_order/high_order_scheme_scalar.tex
+++ b/doc/dissertation/content/high_order/high_order_scheme_scalar.tex
@@ -26,7 +26,7 @@ system for different time discretizations follows:
 \begin{equation}\label{eq:high_ss}
    \highorderssmatrix\highordersolution = \ssrhs
 \end{equation}
-\begin{center}{\textbf{Semidiscrete scheme}:}\end{center}
+\begin{center}{\textbf{Semi-discrete scheme}:}\end{center}
 \begin{equation}\label{eq:high_semidiscrete}
    \consistentmassmatrix\ddt{\highordersolution}
     + \highorderssmatrix(\timevalue)\highordersolution(\timevalue) 
