--- a/doc/dissertation/content/implementation/cumulative_antidiffusion.tex
+++ b/doc/dissertation/content/implementation/cumulative_antidiffusion.tex
@@ -61,7 +61,7 @@ The right hand side vector becomes
       + \dt\cumulativecorrectionfluxvector^{(\ell+1)} \eqp
 \end{equation}
 
-The pseudocode for this alternative defect correction scheme is given
+The pseudo-code for this alternative defect correction scheme is given
 in Algorithm \ref{alg:defect_correction_fct}.
 
 \begin{algorithm}[H]
