--- a/doc/dissertation/content/implementation/nonlinear_iteration.tex
+++ b/doc/dissertation/content/implementation/nonlinear_iteration.tex
@@ -3,7 +3,7 @@ considered for the scalar case only. The examples given in this section thus
 correspond to the scalar case; however, the same methodology could be used
 for systems of conservation laws.
 
-The nonlinear systems considered in this research can be written in a quasilinear
+The nonlinear systems considered in this research can be written in a quasi-linear
 form:
 \begin{equation}\label{eq:nonlinear_equation}
   \nonlinearmatrix(\solutionvector)\solutionvector
@@ -55,7 +55,7 @@ a relaxation parameter $\relaxationparameter$:
     + \relaxationparameter\Delta\solutionvector^{(\ell+1)} \eqp
 \end{equation}
 
-The pseudocode for this defect correction scheme is given in Algorithm
+The pseudo-code for this defect correction scheme is given in Algorithm
 \ref{alg:defect_correction}.
 The notation $\|\ssres\|_X$ denotes some norm $X$ of $\ssres$.
 The initial guess is denoted by $\solutionvector^{\text{guess}}$. For
