--- a/doc/dissertation/content/introduction/hyperbolic_intro.tex
+++ b/doc/dissertation/content/introduction/hyperbolic_intro.tex
@@ -36,7 +36,7 @@ examples are the Lax entropy condition and the Oleinik entropy
 condition \cite{leveque2002}\refsec{11.13}; however, it is typically impractical
 to apply these conditions in a numerical simulation. The research in this
 dissertation employs the notion of an entropy-based artificial viscosity,
-based on the recent work of Guermond et al. \cite{guermond_ev}.
+based on the recent work of Guermond and others \cite{guermond_ev}.
 %The notion of entropy stems from
 %thermodynamics, in which entropy is a non-decreasing function of time, whereas
 %in mathematics, the concept of entropy is usually viewed as the opposite: it is
