--- a/doc/dissertation/content/introduction/model_equations.tex
+++ b/doc/dissertation/content/introduction/model_equations.tex
@@ -65,7 +65,7 @@ in the 1800s to study kinetic theory of gases \cite{duderstadt}\cite{glasstone}.
 In general, transport theory is used in describing the transport of particles
 or waves through some background media. Such particles might include neutrons,
 electrons, ions, gas molecules, or photons.
-Since its origination, transport theory has evolved indepedently in many
+Since its origination, transport theory has evolved independently in many
 different disciplines and applications such as nuclear reactors,
 atmospheric science, radiation therapy, radiation shielding, and stars.
 In fact, much of the early transport theory was developed to meet the needs
@@ -109,7 +109,7 @@ is removed. The SWE have many applications, including coastal
 flows, lakes, rivers, dam breaks, and tsunamis \cite{kirby}.
 
 
-The importance of the tsunami modelling in nuclear engineering has
+The importance of the tsunami modeling in nuclear engineering has
 been highlighted in recent years.
 The magnitude 9.0 earthquake that occurred off the coast of Tohoku in 2011,
 often referred to as the Great East Japan earthquake \cite{USGS_tohoku},
