--- a/doc/dissertation/content/low_order/invariant_domain.tex
+++ b/doc/dissertation/content/low_order/invariant_domain.tex
@@ -142,7 +142,7 @@ From this expression, it is easier to see the underlying requirement: for a give
 time step step, the elementary waves generated from each Riemann problem between
 neighboring nodal data must not travel far enough such that they can interact.
 Each of these Riemann problems is separated by a distance $\geq \dx_{\textup{min}}$,
-so if for example for a pair of adjacent Riemann problems, a wave is travelling
+so if for example for a pair of adjacent Riemann problems, a wave is traveling
 to the right from the left Riemann problem and to the left from the right Riemann
 problem, then they could interact at half the distance between them.
 In practice, to determine $\wavespeed_{\textup{max}}(\invariantset)$ for a
