--- a/doc/dissertation/content/low_order/low_order_scheme_scalar.tex
+++ b/doc/dissertation/content/low_order/low_order_scheme_scalar.tex
@@ -43,7 +43,7 @@ is used. The low-order system is given here for different time discretizations:
 \begin{equation}\label{eq:low_ss}
    \loworderssmatrix\lowordersolution = \ssrhs
 \end{equation}
-\begin{center}{\textbf{Semidiscrete scheme}:}\end{center}
+\begin{center}{\textbf{Semi-discrete scheme}:}\end{center}
 \begin{equation}\label{eq:low_semidiscrete}
    \lumpedmassmatrix\ddt{\lowordersolution}
     + \loworderssmatrix(\timevalue)\lowordersolution(\timevalue) 
