--- a/doc/dissertation/content/results/shallowwater/shallowwater.tex
+++ b/doc/dissertation/content/results/shallowwater/shallowwater.tex
@@ -32,7 +32,7 @@ terrain beneath the water surface, taken from \cite{chen2013} and
 the initial values for the height $\height$ are defined in 4 regions, so this is
 not a classic 2-region Riemann value problem. The bump is nominally in the
 region $|x-750|\leq 187.5$, i.e., $x\in(562.5,937.5)$; 
-however, the bump profile, i.e., the bathyemetry function $\bathymetry(x)$,
+however, the bump profile, i.e., the bathymetry function $\bathymetry(x)$,
 is interpolated to the finite element space.
 Typical end times are $\timevalue=15$ and $\timevalue=55$.
 Table \ref{tab:1d_dam_break_bump} summarizes the test parameters.
