--- a/doc/dissertation/content/results/transport/interface/description.tex
+++ b/doc/dissertation/content/results/transport/interface/description.tex
@@ -83,7 +83,7 @@ applied to this test problem are
   \end{equation}
 \end{subequations}
 The first study considers instead, the tighter solution bounds
-\begin{subequations}
+\begin{subequations}\label{eq:modified_analytic_bounds}
   \begin{equation}
       \solutionbound_i^-
         \equiv 
@@ -128,7 +128,7 @@ paths taken to obtain the FCT solutions.
 For the second study, the upwind solution bounds given by Equation 
 \eqref{eq:local_max_principle} are considered, where here the
 node indices are assumed to be ordered left to right:
-\begin{subequations}
+\begin{subequations}\label{eq:upwind_bounds}
   \begin{equation}
       \solutionbound_i^-
         \equiv 
