--- a/doc/dissertation/content/results/transport/multi_region/description.tex
+++ b/doc/dissertation/content/results/transport/multi_region/description.tex
@@ -50,4 +50,4 @@ The exact solution has the following form:
         \end{array}\right. \eqc
 \end{equation}
 \end{subequations}
-where $s_i$ is the distance travelled in region $i$.
+where $s_i$ is the distance traveled in region $i$.
