--- a/doc/dissertation/content/results/transport/skew_void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/skew_void_to_absorber/description.tex
@@ -48,7 +48,7 @@ following condition:
    \exists i: x_i-\Omega_i t < 0,
 \]
 where $i$ denotes a coordinate direction index $x$, $y$, or $z$.
-The distance travelled in the absorber region, $s$, is computed
+The distance traveled in the absorber region, $s$, is computed
 by first determining which plane segment of the absorber region
 through which the line $\x-\mathbf{\Omega}t$ passes; the coordinate
 direction normal to this plane is denoted by $i$ and the other
@@ -94,7 +94,7 @@ for explicit Euler and SSPRK33 time discretizations, respectively.
 This test problem reveals some multidimensional effects of spurious
 oscillations, as one can see in the Galerkin and EV solutions. Comparing
 Figures \ref{fig:skew_void_to_absorber_2D_fe} and \ref{fig:void_to_absorber_2D_fe},
-one can see that in the skew case, oscillations are now not just perpindicular
+one can see that in the skew case, oscillations are now not just perpendicular
 to the $x$ axis but also to the $y$ axis, due to the gradients on each
 edge of the absorber region. One can also see some faint oscillations
 propagating from the corner of the absorber region. It is also interesting
