--- a/doc/dissertation/content/results/transport/source_in_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/source_in_absorber/description.tex
@@ -51,7 +51,7 @@ One can see clearly from a comparison of the FCT solutions with strongly
 imposed BC that cancellation of the antidiffusive fluxes from the boundary
 has a significant impact on the solution; the approach to the first saturation 
 value roughly follows the low-order solution because the first antidiffusive
-flux was cancelled. Allowing nonzero antidiffusive fluxes from the Dirichlet
+flux was canceled. Allowing nonzero antidiffusive fluxes from the Dirichlet
 node shows superior results in this case - the FCT solution follows the
 high-order solution on the
 first approach to saturation, which is within the FCT solution bounds. These
