--- a/doc/dissertation/content/results/transport/void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/void_to_absorber/description.tex
@@ -40,9 +40,9 @@ and SSPRK33 time discretizations, respectively, and Figure
 
 From Figure \ref{fig:void_to_absorber_2D_ssprk33}, one can see that the
 Galerkin scheme (which has no artificial dissipation) generates significant
-spurious oscillations perpindicular to the transport direction, even below the
+spurious oscillations perpendicular to the transport direction, even below the
 absorber region. The oscillations are particularly severe along the lower edge
-of the absorber region, where particles/photons are travelling parallel to the
+of the absorber region, where particles/photons are traveling parallel to the
 absorber; this edge has a sharper gradient in the solution than the left edge
 of the absorber region due to the lack of attenuation in this direction, which
 is present for the left edge. Figure \ref{fig:void_to_absorber_2D_ssprk33},
