--- a/doc/dissertation/content/results/transport/obstruction/description.tex
+++ b/doc/dissertation/content/results/transport/obstruction/description.tex
@@ -162,7 +162,7 @@ BE with 256 cells for a range of CFL numbers. In computing the EV-FCT
 solution for a time step, one first computes the EV solution iteratively
 and then computes the FCT solution iteratively; these two solves
 in the EV-FCT solution are represented by the \emph{EV} and \emph{FCT} columns.
-The subcolumns \emph{Total} and \emph{Avg.} correspond to the total
+The sub-columns \emph{Total} and \emph{Avg.} correspond to the total
 number of iterations in the transient and the average number of iterations
 per time step, respectively. Entries of -- denote that convergence failed
 during the transient for either EV or FCT, and the entry
