changed notation for cell domain

--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -81,7 +81,7 @@
 
 % domain and FEM
 \newcommand{\domain}{\mathcal{D}}
-\newcommand{\celldomain}[1][\cell]{\mathcal{X}_#1}
+\newcommand{\celldomain}[1][\cell]{\domain_#1}
 \newcommand{\facedomain}{\domain}
 \newcommand{\domainboundary}{\partial\domain}
 \newcommand{\incomingdomainboundary}{\domainboundary^{\textup{inc}}}
